# docs/api-docs.yaml
@@ -4,16 +4,72 @@ info:
   description: Ebook Store API
   version: 1.0.0
 tags:
+  - name: authorization
+    description: Authorization of API
   - name: categories
     description: Categories of ebooks
 servers:
   - url: localhost:3000/
     description: Development server
 paths:
-  /categories:
-    get:
+  /sign_up:
+    post:
+      tags:
+       - authorization
+      summary: Sign Up
+      description: Sign Up.
+      operationId: signUp
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignUpRequest'
+      responses:
+        201:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignUpResponse'
+        400:
+          description: Bab Request
+        422:
+          description: UnprocessableEntity
+  /sign_in:
+    post:
+      tags:
+       - authorization
+      summary: Sign In
+      description: Sign In.
+      operationId: signIn
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignInRequest'
+      responses:
+        201:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignInResponse'
+        401:
+          description: Unauthorized
+  /sign_out:
+    delete:
       security:
         - Authorization: []
+      tags:
+       - authorization
+      summary: Sign Out
+      description: Sign Out.
+      operationId: signOut
+      responses:
+        204:
+          description: NoContent
+  /categories:
+    get:
       tags:
        - categories
       summary: Fetch categories
@@ -141,3 +197,59 @@ components:
             code:
               type: string
               description: Code of category
+    SignUpRequest:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            type:
+              type: string
+              description: Type of entity
+            attributes:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: User email
+                password:
+                  type: string
+                  description: User password
+      example:
+        data:
+            type: user
+            attributes:
+              email: user.test@gmail.com
+              password: "123456"
+    SignUpResponse:
+      type: object
+      properties:
+        info:
+          type: string
+          description: Info message
+      example:
+        info: User created with success.
+    SignInRequest:
+      type: object
+      properties:
+        user:
+          type: object
+          properties:
+            email:
+              type: string
+              description: User email
+            password:
+              type: string
+              description: User password
+      example:
+        user:
+          email: user.test@gmail.com
+          password: "123456"
+    SignInResponse:
+      type: object
+      properties:
+        token:
+          type: string
+          description: JTW token
+      example:
+        info: eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiI4Iiwic2NwIjoidXNlciIsImF1ZCI6bnVsbCwiaWF0IjoxNjIzODk5ODQyLCJleHAiOjE2MjM5MDM0NDIsImp0aSI6IjcxMzZhNzRhLTBjZTktNDIyMy1hMzFjLWU3NDhhZmU0MGUzNCJ9.oP9Ho5FZ44TeCT6687pDhBmUL-bWhHxCOuvd45_OJsg
